Ensure that the plugin icon is vertically aligned (#5401)

--- a/server/webapp/WEB-INF/rails/webpack/views/pages/new_plugins/index.scss
+++ b/server/webapp/WEB-INF/rails/webpack/views/pages/new_plugins/index.scss
@@ -17,7 +17,6 @@
 
 $collapse-icon-size: 30px;
 
-
 .plugin-header {
   display:     flex;
   align-items: center;
@@ -28,8 +27,9 @@ $collapse-icon-size: 30px;
   vertical-align: middle;
   margin:         0 15px 0 -15px;
   img {
-    width:  $collapse-icon-size;
-    height: $collapse-icon-size;
+    width:          $collapse-icon-size;
+    height:         $collapse-icon-size;
+    vertical-align: middle;
   }
   @media (min-width: $screen-md) {
     display: inline-block;
